[package]
name = "axum_course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tokio = { version = "1", features = ["full"]}

axum = "0.6"
watch = "0.2.2"
tower-http = { version="0.4.0", features = ["fs"] }
tower-cookies = "0.9"

[dev-dependencies]
anyhow="1"
httpc-test= "0.1.1"
